12/10/13 Custom: don't display water color when pH='7.00', since there's no water in this screen
12/10/13 Custom: flip everything LTR
12/9/13 Basics: anchor combo box on it's left edge, for i18n
12/9/13 fix color of PHValueNode and ExpandCollapseBar, use sRGB
12/9/13 shorten vertical pipe on drain faucet, so that pH probe fits below it
12/9/13 Basics: fix positioning of probe to account for it being reflected horizontally
12/9/13 Basics: delete unused param from BasicsPHMeterNode.WireNode constructor
12/9/13 Basics: put pH indicator in a different coordinate frame, move PHValueNode behind probe and wire in rendering order
12/9/13 Basics: use opaque gray for disabled PHValueNode, so that wire behind it doesn't show through
12/9/13 add optional midpoint color for some solutions, rewrite algorithm for computing solution color
12/9/13 Basics: decrease length of drain pipe, move beaker slightly to the right
12/9/13 Basics: adjust pH meter wire control points so that the wire looks good when measuring the drain
12/9/13 Basics: make beaker slightly narrower so that drain faucet plunger isn't being dragged right up to edge of screen
12/9/13 Basics: move pH meter slightly right to so that we have some room to accommodate i18n of 'Neutral (7)'
12/9/13 Basics: make pH scale narrower so that we have some room to accommodate i18n of 'Neutral (7)'
12/9/13 Basics: right-justify combo box relative to faucet, so it has room to grow left for i18n
12/9/13 Basics: compute all locations using the beaker location and size
12/9/13 Basics: move 'Reset All' button to lower-right, so that it's not in the way when using pH probe to measure drain
12/9/13 Basics: reduce height of beaker and move it up, so that pH probe fits under the drain faucet
12/9/13 Basics: adjust drag bounds of pH probe
12/9/13 Basics: pH meter body is not draggable, so don't make the body a 'Movable'
12/9/13 use same line width for button border and vertical separator in combo box, sun#42