@@ -41,13 +41,17 @@ define( function( require ) {
     ];
 
     thisModel.water = Water;
-    thisModel.beaker = new Beaker( new Vector2( 270, 580 ), new Dimension2( 300, 305 ) );
+
+    // Beaker and the stuff that is positioned relative to it.
+    thisModel.beaker = new Beaker( new Vector2( 745, 580 ), new Dimension2( 300, 305 ) );
     var yDropper = 260;
-    thisModel.dropper = new Dropper( Solute.CHICKEN_SOUP, new Vector2( thisModel.beaker.location.x + 60, yDropper ), new Bounds2( 300, yDropper, 400, yDropper ) );
+    thisModel.dropper = new Dropper( Solute.CHICKEN_SOUP,
+      new Vector2( thisModel.beaker.left + 100, yDropper ),
+      new Bounds2( thisModel.beaker.left + 40, yDropper, thisModel.beaker.right - 170, yDropper ) );
     thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume );
-    thisModel.waterFaucet = new Faucet( new Vector2( 185, 230 ), -400,
+    thisModel.waterFaucet = new Faucet( new Vector2( thisModel.beaker.right - 50, thisModel.beaker.location.y - thisModel.beaker.size.height - 45 ), -400,
       { enabled: thisModel.solution.volumeProperty.get() < thisModel.beaker.volume } );
-    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 70, 632 ), thisModel.beaker.right,
+    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.right + 75, thisModel.beaker.location.y + 43 ), thisModel.beaker.right,
       { enabled: thisModel.solution.volumeProperty.get() > 0 } );
 
     // Enable faucets and dropper based on amount of solution in the beaker.
